@@ -1,3 +1,8 @@
+2008-02-13  Alexander Larsson  <alexl@redhat.com>
+
+        * hal/ghalmount.c:
+	Don't show nfs mounts (#516036)
+
 2008-02-12  Alexander Larsson  <alexl@redhat.com>
 
 	* hal/ghalvolumemonitor.c (g_hal_volume_monitor_finalize):
